[package]
name = "wasm_env"
version = "0.0.0"
authors = ["Mingwei Samuel <mingwei.samuel@gmail.com>"]
repository = "https://github.com/MingweiSamuel/Riven"
description = "Rust std::env in NodeJS Wasm"
readme = "README.md"
license = "MIT"
edition = "2021"
include = ["src/**", "../README.md"]
keywords = ["env", "env-var", "environment", "wasm"]
categories = ["wasm"]

[lib]
crate-type = ["cdylib"]

[build]
target = "wasm32-unknown-unknown"

[dependencies]
js-sys = "0.3"
os_str_bytes = { version = "7.0", features = [ "checked_conversions" ] }
wasm-bindgen = "0.2"

[dev-dependencies]
wasm-bindgen-test = "0.3"
